syntax = "proto3";

package orderItem;

import 'common.proto';
import 'google/protobuf/any.proto';
import "google/protobuf/timestamp.proto";
import 'google/protobuf/struct.proto';

message OrderItem {
  string id = 1;
  string productVariantId = 2;
  string orderId = 3;
  string displayName = 4;
  float priceInclTax = 5;
  float priceExclTax = 6;
  int32 quantity = 7;
  float subTotal = 8;
  float discount = 9;
  float tax = 10;
  float total = 11;
  google.protobuf.Timestamp createdAt = 12;
  google.protobuf.Timestamp updatedAt = 13;
}

message OrderItems {
  repeated OrderItem orderItems = 1;
}

message OrderItemEdge {
  OrderItems node = 1;
  string cursor = 2;
}

message OrderItemConnection {
  common.PageInfo pageInfo = 1;
  int32 totalCount = 2;
  repeated OrderItemEdge edges = 3;
}

message OrderItemInput {
  string productVariantId = 1;
  string orderId = 2;
  string displayName = 3;
  float priceInclTax = 4;
  float priceExclTax = 5;
  int32 quantity = 6;
  float subTotal = 7;
  float discount = 8;
  float tax = 9;
  float total = 10;
}

message CreateOrderItemInput {
  OrderItemInput data = 1;
}

message CreateManyOrderItemsInput {
  repeated OrderItemInput orderInputs = 1;
}

message UpdateOrderItemInput {
  string id = 1;
  OrderItemInput data = 2;
}

message UpdateManyOrderItemsInput {
  google.protobuf.Any filter = 1;
  OrderItemInput update = 2;
}

message DeleteManyOrderItemsInput {
  google.protobuf.Any filter = 1;
}

message NullableOrderItem {
  oneof kind {
    google.protobuf.NullValue null = 1;
    OrderItem data = 2;
  }
}